--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,23 @@
 #app {
-  max-width: 1280px;
-  margin: 10px auto;
   padding: 2rem;
+}
+
+#title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
+span {
+  font-weight: 700;
+}
+
 .items {
-  border: 1px white solid;
-  border-radius: 25% 10%;
+  border: 2px white solid;
+  border-radius: 5px;
   background-color: #5b6dcd;
+  padding: 20px;
+  font-size: larger;
+  width: 40vw;
 }
