--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,46 +1,47 @@
 .icon-parent {
   padding: 4px;
-  height: 15.977px;
-  width: 15.977px;
+  height: 14.5px;
+  width: 14.5px;
 }
 
 .icon-parent:hover {
   cursor: pointer;
 }
 
-.gg-clipboard {
+.icon-parent:hover .gg-album {
+  color: #ffaec8;
+}
+
+.gg-album {
   box-sizing: border-box;
   position: relative;
   display: block;
+  width: 18px;
+  height: 18px;
   transform: scale(var(--ggs, 1));
-  width: 16px;
-  height: 16px;
-  border: 2px solid;
-  border-radius: 2px;
+  border-left: 7px solid transparent;
+  border-right: 3px solid transparent;
+  border-bottom: 8px solid transparent;
+  box-shadow: 0 0 0 2px, inset 6px 4px 0 -4px,
+    inset -6px 4px 0 -4px;
+  border-radius: 3px;
 }
 
-.gg-clipboard::after,
-.gg-clipboard::before {
+.gg-album::after,
+.gg-album::before {
   content: "";
   display: block;
   box-sizing: border-box;
   position: absolute;
-  border-radius: 2px;
-  width: 10px;
-  left: 2px;
-}
-
-.gg-clipboard::before {
-  border: 2px solid;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-  top: -2px;
-  height: 6px;
-}
-
-.gg-clipboard::after {
-  height: 2px;
+  width: 2px;
+  height: 5px;
   background: currentColor;
-  box-shadow: 0 -4px 0 0;
-  bottom: 2px;
+  transform: rotate(46deg);
+  top: 5px;
+  right: 4px;
+}
+
+.gg-album::after {
+  transform: rotate(-46deg);
+  right: 2px;
 }
