--- a/src/app.css
+++ b/src/app.css
@@ -24,12 +24,10 @@ ul li {
 }
 
 .items {
-  /* border: 2px white solid; */
   border-radius: 5px;
-  /* background-color: #5b6dcd; */
   padding: 20px;
   font-size: larger;
-  width: 40vw;
+  width: 58vw;
 }
 
 .delete-button {
@@ -37,49 +35,12 @@ ul li {
 }
 
 .logo {
-  margin-left: 30px;
+  margin-bottom: 30px;
   height: 90px;
   width: auto;
 }
 
 /* gg-css icons */
-.gg-clipboard {
-  box-sizing: border-box;
-  position: relative;
-  display: inline;
-  transform: scale(var(--ggs, 1));
-  width: 22px;
-  height: 22px;
-  border: 2px solid;
-  border-radius: 2px;
-}
-
-.gg-clipboard::after,
-.gg-clipboard::before {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  border-radius: 2px;
-  width: 10px;
-  left: 2px;
-}
-
-.gg-clipboard::before {
-  border: 2px solid;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-  top: -2px;
-  height: 6px;
-}
-
-.gg-clipboard::after {
-  height: 2px;
-  background: currentColor;
-  box-shadow: 0 -4px 0 0;
-  bottom: 2px;
-}
-
 .gg-close-o {
   box-sizing: border-box;
   position: relative;
